--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,6 +29,7 @@ android {
     namespace "com.example.mandy_notes"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
+    // ndkVersion "25.1.8937393"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
