--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.7
   smooth_page_indicator: ^1.1.0
   http: ^1.1.0
+  rive: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
     - assets/vectors/
     - assets/imagenes/
     - assets/iconos/
+    - assets/riveAnimations/
     # - assets/vectors
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
